tweak branding to be darker

--- a/less/variables.less
+++ b/less/variables.less
@@ -11,10 +11,10 @@
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              lighten(@gray-base, 20%);   // #333
 @gray:                   lighten(@gray-base, 33.5%); // #555
-@gray-light:             #4E5D6C;   // #999
+@gray-light:             #3C3E42;   // #999
 @gray-lighter:           #EBEBEB; // #eee
 
-@brand-primary:         #DF691A;
+@brand-primary:         #7B5D8C;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
@@ -26,7 +26,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #2B3E50;
+@body-bg:               #282628;
 //** Global text color on `<body>`.
 @text-color:            @gray-lighter;
 
@@ -135,7 +135,7 @@
 @table-bg-active:               @table-bg-hover;
 
 //** Border color for table and cell borders.
-@table-border-color:            @gray-light;  
+@table-border-color:            @gray-light;
 
 
 //== Buttons
@@ -758,7 +758,7 @@
 
 //== Wells
 //
-//## 
+//##
 
 @well-bg:                     @gray-light;
 @well-border:                 transparent;
