add a second branding colour for links

--- a/less/variables.less
+++ b/less/variables.less
@@ -15,6 +15,7 @@
 @gray-lighter:           #EBEBEB; // #eee
 
 @brand-primary:         #7B5D8C;
+@brand-primary-lighter  lighten(@brand-primary, 30%);
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
@@ -31,7 +32,7 @@
 @text-color:            @gray-lighter;
 
 //** Global textual link color.
-@link-color:            @brand-primary;
+@link-color:            @brand-primary-lighter;
 //** Link hover color set via `darken()` function.
 @link-hover-color:      @link-color;
 //** Link hover decoration.
