--- a/less/variables.less
+++ b/less/variables.less
@@ -15,7 +15,7 @@
 @gray-lighter:           #EBEBEB; // #eee
 
 @brand-primary:         #7B5D8C;
-@brand-primary-lighter: lighten(@brand-primary, 20%);
+@brand-primary-lighter: saturate(lighten(@brand-primary, 20%), 20%);
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
