--- a/less/variables.less
+++ b/less/variables.less
@@ -18,7 +18,7 @@
 @brand-primary-lighter: saturate(lighten(@brand-primary, 20%), 20%);
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
-@brand-warning:         #f0ad4e;
+@brand-warning:         #f09b29;
 @brand-danger:          #d9534f;
 
 
